[tool.poetry]
name = "pycistarget"
version = "1.0a2"
description = "pycistarget is a python module to perform motif enrichment analysis in sets of regions with different tools and identify high confidence TF cistromes"
authors = ["Seppe De Winter, Carmen Bravo"]
license = "Academic Non-commercial"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9 <3.12"
numpy = "^1.26.2"
pandas = "^2.1.3"
pyranges = "^0.0.129"
h5py = "^3.10.0"
ctxcore = "^0.2.0"
ipython = "^8.18.1"
scikit-learn = "^1.3.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pycistarget = "pycistarget.cli.pycistarget:main"